[gd_scene load_steps=6 format=3 uid="uid://2qywjxudlm4q"]

[ext_resource type="Texture2D" uid="uid://cl381avnnosis" path="res://entities/assembler/panel_wide.png" id="1_2lybp"]
[ext_resource type="Script" uid="uid://b0xt5p8n1nka8" path="res://entities/assembler/assembler.gd" id="1_wltfe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wltfe"]
size = Vector2(186, 94)

[sub_resource type="CircleShape2D" id="CircleShape2D_wltfe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yngo0"]

[node name="Assembler" type="Node2D"]
script = ExtResource("1_wltfe")

[node name="PanelWide" type="Sprite2D" parent="."]
modulate = Color(0.3, 1, 0, 1)
position = Vector2(50, 0)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_2lybp")

[node name="Area2D" type="Area2D" parent="." groups=["draggable"]]
position = Vector2(50, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wltfe")

[node name="item_place_left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="item_place_left"]
shape = SubResource("CircleShape2D_wltfe")

[node name="item_place_right" type="Area2D" parent="."]
position = Vector2(100, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="item_place_right"]
shape = SubResource("CircleShape2D_yngo0")

[connection signal="area_entered" from="item_place_left" to="." method="_on_item_place_left_area_entered"]
[connection signal="area_exited" from="item_place_left" to="." method="_on_item_place_left_area_exited"]
[connection signal="area_entered" from="item_place_right" to="." method="_on_item_place_right_area_entered"]
[connection signal="area_exited" from="item_place_right" to="." method="_on_item_place_right_area_exited"]
